@@ -1,3 +1,9 @@
+2010-07-21  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/TestViewContent.cs:
+	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Track
+	  API changes.
+
 2010-07-18  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Track API
